--- a/public/less/style.less
+++ b/public/less/style.less
@@ -12,6 +12,11 @@ body{
 	form{
 		margin-bottom: 0;
 	}
+	&#loginModal{
+		.modal-header{
+			border:0;
+		}
+	}
 }
 @media (max-width: 979px) {
 	body{
