--- a/public/less/style.less
+++ b/public/less/style.less
@@ -30,5 +30,9 @@ a.brand{
 @media (max-width: 979px) {
 	body{
 		margin: 0;
+		padding:0 5px;
+	}
+	.navbar-inner{
+		padding:0 20px !important;
 	}
 }
