--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,6 +1,6 @@
 body{
 	margin-top:60px;
-	overflow-x:hidden;
+	
 }
 a.brand{
 	small{
@@ -30,9 +30,9 @@ a.brand{
 @media (max-width: 979px) {
 	body{
 		margin: 0;
-		padding:0 5px;
 	}
-	.navbar-inner{
-		padding:0 20px !important;
-	}
+	// legend{
+	// 	text-indent: 10px;
+	// }
+	
 }
