--- a/public/less/style.less
+++ b/public/less/style.less
@@ -18,6 +18,12 @@ a.brand{
 .table-route-list{
 	width: 100%;
 }
+.back-to-routes{
+	display: none;
+	float: left;
+	margin-right: 10px;
+	margin-bottom: 15px;
+}
 .modal{
 	form{
 		margin-bottom: 0;
