Footer links. Closes #14, closes #15

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -11,6 +11,22 @@ a.brand{
 	margin: 0 auto;
 	float: none;
 }
+footer {
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 70px;
+  border-top: 1px solid #e5e5e5;
+  background-color: #f5f5f5;
+
+  .footer-links  {
+    margin: 0;
+
+    li {
+      display: inline;
+      padding: 0 2px;
+    }
+  }
+}
 #credits{
   padding: 10px;
 	text-align: center;
