--- a/public/less/style.less
+++ b/public/less/style.less
@@ -34,9 +34,40 @@ footer {
 .table-route-list{
 	width: 100%;
 }
-.back-to-routes{
+.dataTables_filter{
+	width: 100%;
+}
+.dataTables_wrapper{
+	width: 100%;
+}
+table.dataTable{
+	thead{
+		tr{
+			th{
+				line-height: 30px !important;
+				padding:0 5px !important;
+				color: red;			
+			}
+		}
+	}
+}
+.pinned{
+	table.dataTable{
+		thead{
+			tr{
+				th{
+					line-height: 30px !important;
+					padding:0 5px !important;
+					color: blue;
+				}
+			}
+		}
+	}
+}
+.back-to-routes-container{
+	width: 100%;
 	display: none;
-	float: left;
+	float: none;
 	margin-right: 10px;
 	margin-bottom: 15px;
 }
