--- a/public/less/style.less
+++ b/public/less/style.less
@@ -31,8 +31,13 @@ footer {
   padding: 10px;
 	text-align: center;
 }
+.route-table-wrapper{
+	width: 100%;
+	overflow: auto;
+}
 .table-route-list{
 	width: 100%;
+	
 }
 .dataTables_filter{
 	width: 100%;
@@ -84,9 +89,9 @@ footer {
 @media (max-width: 979px) {
 	body{
 		margin: 0;
+		
 	}
-
-
+	
 }
 
 //datatable
