--- a/public/less/style.less
+++ b/public/less/style.less
@@ -27,6 +27,9 @@ footer {
     }
   }
 }
+.fb-connect-button-wrapper{
+	text-align: center;
+}
 #credits{
   padding: 10px;
 	text-align: center;
@@ -83,7 +86,15 @@ footer {
 	&#loginModal{
 		.modal-header{
 			border:0;
+			.nav{
+				margin-bottom: 0;
+			}
 		}
+	}
+}
+.fb-login{
+	img{
+		width: 200px;
 	}
 }
 @media (max-width: 979px) {
