--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,25 @@
 body {
-  margin-top: 60px;
+  margin-top: 65px;
 }
 a.brand small {
   font-size: 12px;
+}
+.navbar-inner {
+  -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid #d7d7d7;
+  background: #F6F6F6;
+  padding: 5px 0;
+}
+p {
+  font-size: 12px;
+  color: #333;
+}
+.well h2 {
+  margin-top: 0;
+  font-size: 18px;
+  line-height: 18px;
 }
 .centered-span {
   margin: 0 auto;
