--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,13 @@ p {
   font-size: 12px;
   color: #333;
 }
-.well h2 {
+.text-wrapper {
+  background: #F6F6F6;
+  border: 1px solid #d7d7d7;
+}
+.text-wrapper h2 {
+  color: #333;
+  font-weight: bold;
   margin-top: 0;
   font-size: 18px;
   line-height: 18px;
