--- a/public/less/style.less
+++ b/public/less/style.less
@@ -21,8 +21,12 @@ p{
 	color: #333;
 
 }
-.well{
+.text-wrapper{
+	background: #F6F6F6;
+	border: 1px solid #d7d7d7;
 	h2{
+		color: #333;
+		font-weight: bold;
 		margin-top: 0;
 		font-size: 18px;
 		line-height: 18px;
