--- a/public/less/style.less
+++ b/public/less/style.less
@@ -32,6 +32,14 @@ p{
 		line-height: 18px;
 	}
 }
+.text-wrapper p,
+.text-wrapper li {
+  font-size: 13px;
+  color: #000;
+}
+.text-wrapper h2 {
+  color: #000;
+}
 .centered-span{
 	margin: 0 auto;
 	float: none;
