--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,13 @@
 body {
   margin-top: 65px;
 }
+a.brand {
+  line-height: 30px;
+}
+a.brand img {
+  margin-right: 5px;
+  margin-top: -2px;
+}
 a.brand small {
   font-size: 12px;
 }
@@ -10,7 +17,10 @@ a.brand small {
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid #d7d7d7;
   background: #F6F6F6;
-  padding: 5px 0;
+  padding: 0;
+}
+.navbar-inner ul.nav li a {
+  line-height: 32px;
 }
 p {
   font-size: 12px;
@@ -29,11 +39,11 @@ p {
 }
 .text-wrapper p,
 .text-wrapper li {
-    font-size: 13px;
-    color: #000;
+  font-size: 13px;
+  color: #000;
 }
 .text-wrapper h2 {
-    color: #000;
+  color: #000;
 }
 .centered-span {
   margin: 0 auto;
