--- a/public/less/style.less
+++ b/public/less/style.less
@@ -3,6 +3,11 @@ body{
 
 }
 a.brand{
+	line-height: 30px;
+	img{
+		 margin-right: 5px;
+		 margin-top: -2px;
+	}
 	small{
 		font-size: 12px;
 	}
@@ -14,7 +19,14 @@ a.brand{
 	box-shadow: 0 1px 10px rgba(0,0,0,0.1);
 	border: 1px solid #d7d7d7;
 	background: #F6F6F6;
-	padding:5px 0;
+	padding:0;
+	ul.nav{
+		li{
+			a{
+				line-height: 32px;
+			}
+		}
+	}
 }
 p{
 	font-size: 12px;
