--- a/public/less/style.less
+++ b/public/less/style.less
@@ -2,6 +2,9 @@ body{
 	margin-top:65px;
 
 }
+a{
+	outline:none !important;
+}
 a.brand{
 	line-height: 30px;
 	img{
@@ -22,10 +25,11 @@ a.brand{
 	padding:0;
 	ul.nav{
 		li{
-			a{
-				line-height: 32px;
-			}
+			line-height: 32px;
 		}
+	}
+	#login-button{
+		margin-top: 10px;
 	}
 }
 p{
