--- a/public/less/style.less
+++ b/public/less/style.less
@@ -137,6 +137,11 @@ footer {
 	form{
 		margin-bottom: 0;
 	}
+  .edit-route-form{
+    .control-group{
+      margin-bottom: 10px;
+    }
+  }
 	&#loginModal{
 		.modal-header{
 			border:0;
