--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,6 +88,7 @@ footer .footer-links li {
 }
 .table-route-list {
   width: 100%;
+  word-break: break-all;
 }
 .dataTables_filter {
   width: 100%;
