removed word breaking

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -101,7 +101,7 @@ footer {
 	width: 100%;
 
   td {
-    word-break: break-all;
+    // word-break: break-all;
   }
   td.route-name {
     max-width: 400px;
@@ -117,7 +117,7 @@ footer {
   }
   td.comment {
     max-width: 220px;
-    word-break: break-all;
+    // word-break: break-all;
   }
 }
 .dataTables_filter{
