--- a/public/less/style.less
+++ b/public/less/style.less
@@ -117,7 +117,7 @@ footer {
   }
   td.comment {
     max-width: 220px;
-    // word-break: break-all;
+    word-break: break-all;
   }
 }
 .dataTables_filter{
