Change modal animation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,5 +196,24 @@ th.sorting_desc:after {
 table.routestable th:active {
   outline: none;
 }
+.modal.fade {
+  top: 10%;
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  -ms-transform: scale(0.7);
+  -o-transform: scale(0.7);
+  transform: scale(0.7);
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+.modal.fade.in {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+}
 /* overwrite 1200 */
 /* end of overwrite */
